<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">1138671626263284</string>
    <string name="fb_login_protocol_scheme">fb1138671626263284</string>
    <string name="PublicKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAqyNcVY/2QYMK1cwsEb3iS2wco0utKHICnfTjKRtfCotPhhyFTpc4TwiD7Hvr6+4ywMhSh2dmsIun+Ms4yX2Bj2atKQJIBlFvEpIPsG8aAf7VyGH0SICuF7Yif7hinvXHIznfJfQa8ZHblt4nkFuJSvXjgNowD/HZ8NQg/dQRkm7BciMkk0fOO2kqKnmnRmRSq7ep3QZ/wa3WTdjV00SV4QFnpliSuHdVlMqpaNlESKo+G9vhnrCIUzTtNDa8IdCIQkTkKe7lMiZN2zXLkDRZC362YZT8aXUYCQ7pQOW7jc+8A9GWV7PkW0MYIKIQbKLlF1/eajPxDaOq/jmcYtNK9wIDAQAB</string>
    <string name="app_name">Trackeru</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove User</string>
    <string name="warning" > Warning</string>
    <string name="change" >Are you sure you wish to change? this can not be undone!</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display username</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="ok" >Ok</string>
    <string name="deleted" >Deleted</string>
    <string name="cancel" >Cancel</string>
    <string name="status" >status</string>
    <string name="battery">low battery, power saving mode activated</string>
    <string name="auto_check">Auto detect</string>
    <string name="feed_group">Enter circle id</string>
    <string name="choose">choose</string>
    <string name="type_code">Enter code</string>
    <string name="confirm">Confirm</string>
    <string name="group_not_ex">Group does not exist!</string>
    <string name="new_circle">New circle</string>
    <string name="change_group_pic">press the icon to change picture</string>
    <string name="empty_name">Name field must not be empty!</string>
    <string name="share_code">Share this code with your friends</string>
    <string name="invite">you are invited to my private circle</string>
    <string name="here">here is the group code:</string>
    <string name="tra">trackeru real time location</string>
    <string name="share_using">Share using</string>
    <string name="share">Share</string>
    <string name="invitaion_success">Invitation sent successfully</string>
    <string name="retry">Failed please try again</string>
    <string name="profile_update">update profile details</string>
    <string name="username_not_av">Username not available</string>
    <string name="all_full">All fields must be full!</string>
    <string name="permission">Please grant permissions!</string>
    <string name="enter_email">Please enter your registered email address</string>
    <string name="instructions">We have sent you instructions on resetting your password</string>
    <string name="no_data">No data</string>
    <string name="enter_emailb">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="background">Would you like to keep sharing location in the background?</string>
    <string name="no_exit">No, exit!</string>
    <string name="map">Map</string>
    <string name="circles">Circles</string>
    <string name="need_permission">This app needs the Location permission, please accept to use location functionality</string>
    <string name="denied">Permission denied</string>
    <string name="deleted_profile">Your profile is deleted:( Create an account now!</string>
    <string name="enter_email_address">Not  a vaalid email address!</string>
    <string name="pass_short">Password too short, enter minimum 6 characters!</string>
    <string name="user_exist">User already exists sign in to continue</string>
    <string name="error_sign_in">Error has accured please select a different sign in method</string>
    <string name="no_network">oops no network please reconnect and try again!</string>
    <string name="auth_failed2">Authentication failed please try a different sign in method</string>
    <string name="sign_in_success">Sign in success!</string>
    <string name="add_users">allows you to add users to your private circle</string>
    <string name="example">name: for example family/friends/work</string>
    <string name="share_code2">share code</string>
    <string name="add_fr_contact">add from contacts</string>
    <string name="add_frieds">add frends to circle</string>
    <string name="create_profile">Create new profile</string>
    <string name="full_name">full name</string>
    <string name="up_pr_pic">upload profile pic</string>
    <string name="next">Next</string>
    <string name="phone">phone</string>
    <string name="username">username</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="load_direction">load direction</string>
    <string name="email_sign_in">sign in with email</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="no_circles_found">no circles found click + to create</string>
    <string name="join">join existing circle</string>
    <string name="create">Create new circle</string>
    <string name="user_details">Users details</string>
    <string name="press_group">press group to view details</string>
    <string name="online">online</string>
    <string name="circles_display">circles display</string>
    <string name="view">view</string>
    <string name="polyline">Polyline</string>
    <string name="map_type">Map type</string>
    <string name="sattelite">sattelite</string>
    <string name="hyb">hybrid</string>
    <string name="terrain">terrain</string>
    <string name="standard">standard</string>
    <string name="settings">settings</string>
    <string name="direction">Directions</string>
    <string name="add_firend">Add friend</string>
    <string name="delete_circle">delete circle</string>


    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>
    <string name="agree">By signing in or creating account you agree to our</string>
    <string name="battery1">Battery</string>
    <string name="general">general</string>
    <string name="remove_ads">Remove ads</string>
    <string name="auto_bat">Auto battery saving mode</string>
    <string name="pw_m">Power saving mode</string>
    <string name="profile_set">Profile settings</string>
    <string name="account">account</string>
    <string name="user_details2">User</string>
    <string name="not_valid">Username not valid!</string>
    <string name="navigation_button">Navigation button</string>
    <string name="navigate">Press here to navigate</string>
    <string name="got">GOT IT</string>
    <string name="manage">Create and manage circles</string>
    <string name="create_and">Create new Private tracking circles and manage existing circles</string>
</resources>
