<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigation_button"
        android:textColor="#757575"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_below="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate"
        android:textColor="#424242"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/btn"
        android:layout_below="@+id/descriptionTextView"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:background="#55558855"
        android:text="@string/got"/>

</RelativeLayout>